fixed overlapping slide component with navbars

--- a/src/styles/Blog-preview.css
+++ b/src/styles/Blog-preview.css
@@ -33,6 +33,7 @@
 
 .slider-wrapper > * {
   height: 100%;
+  z-index: 100;
 }
 
 .slick-list,
