--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,6 +7,7 @@
   top: 0;
   width: 100%;
   border-bottom: 1px solid rgb(54, 54, 54);
+  z-index: 200;
 }
 
 .burger {
@@ -38,7 +39,6 @@
   width: 50%;
   transform: translateX(-100%);
   transition: transform 0.5s ease-in;
-  z-index: 100000;
 }
 
 .navigation.active {
